--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
@@ -6,7 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="App.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Topshelf" Version="4.2.0" />
+    <PackageReference Include="Topshelf.Log4Net" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
