--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Topshelf" Version="4.2.0" />
     <PackageReference Include="Topshelf.Log4Net" Version="4.2.0" />
   </ItemGroup>
