--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
@@ -7,10 +7,22 @@
 
   <ItemGroup>
     <None Remove="App.config" />
+    <None Remove="job_scheduling_data_2_0.xsd" />
+    <None Remove="quartz.config" />
+    <None Remove="quartz_jobs.xml" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="job_scheduling_data_2_0.xsd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="quartz.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="quartz_jobs.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -18,6 +30,8 @@
   <ItemGroup>
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
+    <PackageReference Include="Quartz" Version="3.0.7" />
+    <PackageReference Include="Quartz.Plugins" Version="3.0.7" />
     <PackageReference Include="Topshelf" Version="4.2.0" />
     <PackageReference Include="Topshelf.Log4Net" Version="4.2.0" />
   </ItemGroup>
