--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Jobs/Demo.MyJob/Demo.MyJob.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,8 +32,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="Quartz.Plugins" Version="3.0.7" />
-    <PackageReference Include="Topshelf" Version="4.2.0" />
-    <PackageReference Include="Topshelf.Log4Net" Version="4.2.0" />
+    <PackageReference Include="Topshelf" Version="4.2.1" />
+    <PackageReference Include="Topshelf.Log4Net" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
