--- a/ABP.Demo/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/ABP.Demo/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abp.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
