--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Application/Demo.MyJob.Application.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Application/Demo.MyJob.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -14,7 +14,7 @@
     <ProjectReference Include="..\Demo.MyJob.Core\Demo.MyJob.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Abp.EntityFrameworkCore" Version="4.7.0" />
-    <PackageReference Include="Abp.AutoMapper" Version="4.7.0" />
+    <PackageReference Include="Abp.EntityFrameworkCore" Version="4.8.1" />
+    <PackageReference Include="Abp.AutoMapper" Version="4.8.1" />
   </ItemGroup>
 </Project>
