--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/Demo.MyJob.Web.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/Demo.MyJob.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -46,8 +46,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Castle.Core" Version="4.4.0" />
-    <PackageReference Include="Abp.AspNetCore" Version="4.7.0" />
-    <PackageReference Include="Abp.Castle.Log4Net" Version="4.7.0" />
+    <PackageReference Include="Abp.AspNetCore" Version="4.8.1" />
+    <PackageReference Include="Abp.Castle.Log4Net" Version="4.8.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
