--- a/ABP.WindowsService/Demo.MyJob/4.0.0/test/Demo.MyJob.Tests/Demo.MyJob.Tests.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/test/Demo.MyJob.Tests/Demo.MyJob.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -26,8 +26,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="Abp.TestBase" Version="4.7.0" />
-    <PackageReference Include="NSubstitute" Version="4.2.0" />
+    <PackageReference Include="Abp.TestBase" Version="4.8.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
     <PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.0" />
