--- a/ABP.WindowsService/Demo.MyJob/4.0.0/test/Demo.MyJob.Web.Tests/Demo.MyJob.Web.Tests.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/test/Demo.MyJob.Web.Tests/Demo.MyJob.Web.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -26,7 +26,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Abp.AspNetCore.TestBase" Version="4.7.0" />
+    <PackageReference Include="Abp.AspNetCore.TestBase" Version="4.8.1" />
     <PackageReference Include="AngleSharp" Version="0.12.1" />
   </ItemGroup>
   <ItemGroup>
