--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Core/Demo.MyJob.Core.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Core/Demo.MyJob.Core.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp" Version="4.8.1" />
+    <PackageReference Include="Abp.Castle.Log4Net" Version="4.8.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
