Abp.AutoMapper的灵活使用

--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Core/Demo.MyJob.Core.csproj
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Core/Demo.MyJob.Core.csproj
@@ -19,4 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Demo.MyJob.Entity\Demo.MyJob.Entity.csproj" />
+  </ItemGroup>
 </Project>
