--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/appsettings.json
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/appsettings.json
@@ -5,9 +5,9 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "None",
+      "System": "None",
+      "Microsoft": "None"
     }
   }
 }
