--- a/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/log4net.config
+++ b/ABP.WindowsService/Demo.MyJob/4.0.0/src/Demo.MyJob.Web/log4net.config
@@ -1,21 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender" >
-    <file value="App_Data/Logs/Logs.txt" />
+  <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+    <file type="log4net.Util.PatternString" value="%property{LogsDirectory}\logs\" />
+    <datePattern value="'my-windows-service-'dd.MM.yyyy'.log'" />
+    <staticLogFileName value="false" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
+    <rollingStyle value="Composite" />
     <maxSizeRollBackups value="10" />
-    <maximumFileSize value="10000KB" />
-    <staticLogFileName value="true" />
+    <maximumFileSize value="5MB" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%-5level %date [%-5.5thread] %-40.40logger - %message%newline" />
+      <conversionPattern value="%-5level %date [%-5.5thread] %c - %message%newline" />
     </layout>
   </appender>
   <root>
-    <appender-ref ref="RollingFileAppender" />
-    <level value="DEBUG" />
+    <level value="INFO" />
+    <appender-ref ref="RollingFile" />
   </root>
-  <logger name="NHibernate">
-    <level value="WARN" />
-  </logger>
 </log4net>
